Mini-Projet/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels: 
    app: app
    tier: frontend
spec:
  replicas: 2  
  selector:
    matchLabels: 
      app: app
      tier: frontend
  template:
    metadata:
      labels: 
        app: app
        tier: frontend  
    spec:                 
      containers: 
      - name: frontend
        image: imyyyyy/frontend.image
        ports:
        - containerPort: 8080
