Mini-Projet/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector: 
    app: nodejs
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
