Mini-Projet/k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service 
  namespace: exam
  labels:
    app: mongo
    tier: exam
spec:
  selector:       
    app: mongo
    tier: database
    clusterIP: None  
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
